--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint",
     "predev": "npm run typegen",
     "prebuild": "npm run typegen",
-    "typegen": "sanity schema extract --path=./src/sanity/extract.json && sanity typegen generate"
+    "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "packageManager": "npm@10.9.1",
   "overrides": {
@@ -25,7 +25,7 @@
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^15.1.1-canary.20",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.28",
     "react": "19.0.0-rc-66855b96-20241106",
