--- a/package.json
+++ b/package.json
@@ -12,10 +12,6 @@
     "typegen": "sanity schema extract --path=./sanity/extract.json && sanity typegen generate"
   },
   "packageManager": "npm@10.9.1",
-  "overrides": {
-    "react": "$react",
-    "react-dom": "$react-dom"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@sanity/image-url": "^1.1.0",
@@ -25,11 +21,12 @@
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
     "lucide-react": "^0.462.0",
-    "next": "^15.1.1-canary.20",
+    "markdown-it": "^14.1.0",
+    "next": "^15.1.1-canary.21",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.28",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sanity": "^3.68.1",
     "sanity-plugin-markdown": "^5.0.0",
     "server-only": "^0.0.1",
@@ -38,6 +35,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
