--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "packageManager": "npm@10.9.1",
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.4",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.68.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@uiw/react-markdown-editor": "^6.1.2",
+    "@uiw/react-md-editor": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
