--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@uiw/react-markdown-editor": "^6.1.2",
     "@uiw/react-md-editor": "^4.0.5",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "easymde": "^2.18.0",
